--- a/DDDStart!/6장. 응용 서비스와 표현 영역.md
+++ b/DDDStart!/6장. 응용 서비스와 표현 영역.md
@@ -4,17 +4,18 @@ USER -> 표현 영역 -> 응용 영역 -> 도메인 영역
 
 &nbsp;
 
+
+**응용 서비스** : 실제 사용자가 원하는 기능을 제공
+
+응용 영역은 사용자가 웹브라우저를 사용하는지 REST API를 호출하는지 TCP 소켓을 사용하는지를 알 필요가 없다. 단지 기능 실행에 필요한 입력값을 받아 결과만 리턴하면 된다
+
+&nbsp;
+
 **표현 영역** : 사용자의 요청을 해석함
 
 - URL, 요청 파라미터, 쿠키, 헤더 등을 이용하여 사용자가 어떤 기능을 실행하고 싶어 하는지 판별하고 그 기능을 제공하는 응용 서비스를 실행
 - `사용자로부터 전달받은 데이터 형식`과 `응용 영역에서 필요한 데이터 형식`이 서로 일치하지 않기 때문에 표현 영역에서 변환
 - 응용 서비스에서 리턴받은 값을 사용자가 요구하는 형식에 맞게 변환
-
-&nbsp;
-
-**응용 서비스** : 실제 사용자가 원하는 기능을 제공
-
-응용 영역은 사용자가 웹브라우저를 사용하는지 REST API를 호출하는지 TCP 소켓을 사용하는지를 알 필요가 없다. 단지 기능 실행에 필요한 입력값을 받아 결과만 리턴하면 된다
 
 &nbsp;
 &nbsp;
@@ -26,7 +27,10 @@ USER -> 표현 영역 -> 응용 영역 -> 도메인 영역
 - 주요 역할
   - 도메인 객체를 사용해서 사용자의 요청을 처리하는 것
   - 표현 영역 입장에서는 응용 서비스는 도메인 영역과 표현 영역을 연결해줌
-    - => 파사드(Facade) 역할 Q) GOF디자인패턴에있나?? 파사드가 뭐지?
+    - => 파사드(Facade) 역할을 함
+      - 파사드 : 각 인터페이스 들에 대해서 하나의 통합된 상위 수준의 인터페이스를 제공하는 패턴
+        - 퍼사드를 사용하는 사용자는 서브시스템을 구성하는 객체로 직접 접근하지 않아도 된다
+        - 표현 영역은 도메인 객체로 직접 접근하지 않고 응용 서비스를 사용하면 된다
 
 - 단순한 형태를 갖음
   - 도메인 객체 간의 흐름을 제어
@@ -85,6 +89,8 @@ USER -> 표현 영역 -> 응용 영역 -> 도메인 영역
   - 사용자의 요청을 알맞은 응용 서비스에 전달하고, 결과를 가공하여 사용자에게 제공
   - 사용자의 세션 관리
 
+&nbsp;
+
 #### 값 검증
 
 - 표현 영역
@@ -94,6 +100,10 @@ USER -> 표현 영역 -> 응용 영역 -> 도메인 영역
 - 도메인 영역
   - 비즈니스 정책에 맞는 데이터인지 검증
 
+Spring Validation 는 [Java 와 Spring 의 Validation - Junghoon Song
+](https://medium.com/@gaemi/java-%EC%99%80-spring-%EC%9D%98-validation-b5191a113f5c) 보면 금방 쓸 수 있음
+
+&nbsp;
 
 #### 권한 검사
 
@@ -139,8 +149,7 @@ public class OrderController {
 자세한건 11장 CQRS에서..
 
 &nbsp;
-
-QNA
+&nbsp;
 
 > Q1. 표현 계층에서 파라미터로 RequestDto 받는 클래스들 어느 패키지에 둬야할까
 
